test/libhyperion/syntaxTests/inlineAssembly/assignment_to_function_pointer.hyp
contract C {
    function f() public pure {
        function() external g;
        assembly {
            g.address := 0x42
            g.selector := 0x23
        }
    }
}
// ----
// TypeError 4888: (52-73): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
